core:应用商店接口更新
